--- a/index.html
+++ b/index.html
@@ -65,12 +65,9 @@
         </div>
         <nav class="menu mt-5">
             <a href="/">Trang chủ</a>
-            <a href="/loichuc.html">Gửi lời chúc</a>
-            <a href="/nhanqua.html">Nhận quà</a>
-            <a href="/about.html">About</a>
-            <a href="/contact.html">Contact</a>
+        
         </nav>
-        <button class="cta mt-5 mb-2 mr-5">Gửi lời chúc ngay</button>
+        <button class="cta mt-5 mb-2 mr-5">Goatngu</button>
     </header>
     <section class="countdown-section">
         <div class="calendar">
